--- a/synthetic_slate_roofing.html
+++ b/synthetic_slate_roofing.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <title> Consultar - Business Consulting Services HTML5 Template</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
@@ -54,17 +55,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col col-md-5 col-sm-12 col-12">
-                            <div class="contact-info">
-                                <ul>
-                                    <li>Visit our social pages</li>
-                                    <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                    <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                    <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                    <li><a href="#"><i class="ti-google"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div> <!-- end topbar -->
@@ -87,50 +78,26 @@
                             <div id="navbar" class="collapse navbar-collapse navigation-holder">
                                 <button class="close-navbar"><i class="ti-close"></i></button>
                                 <ul class="nav navbar-nav mb-2 mb-lg-0">
-                                    <li><a href="#">Home</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home style 1</a></li>
-                                            <li><a href="index-2.html">Home style 2</a></li>
-                                            <li><a href="index-3.html">Home style 3</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="#">Services</a>
+                                    <li><a href="#">Siding</a>
                                         <ul class="sub-menu">
-                                            <li><a href="service.html">Service</a></li>
-                                            <li><a href="service-s2.html">Service style 2</a></li>
-                                            <li><a href="service-single.html">Service Single</a></li>
+                                            <li><a href="james_hardie_siding.html">James Hardie Siding</a></li>
+                                            <li><a href="stucco_removal.html">Stucco removal </a></li>
+                                            <li><a href="everlast_siding.html">Everlast siding</a></li>
                                         </ul>
                                     </li>
-                                    <li><a class="active" href="#">Projects</a>
+                                    <li><a href="#">Roofing</a>
                                         <ul class="sub-menu">
-                                            <li><a href="project.html">Project</a></li>
-                                            <li><a href="project-s2.html">Project Style 2</a></li>
-                                            <li><a class="active" href="project-single.html">Project Single</a></li>
+                                            <li><a href="metal_roofing.html">Metal roofing</a></li>
+                                            <li><a href="traditional_shingles_roofing.html">Traditional shingles roofing</a></li>
+                                            <li><a href="synthetic_slate_roofing.html">Synthetic slate roofing</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Pages</a>
+                                    <li><a href="#">Windows</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="testimonial.html">Testimonial</a></li>
-                                            <li><a href="pricing.html">Pricing</a></li>
-                                            <li><a href="404.html">Error 404</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="http://google.com">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog right sidebar</a></li>
-                                            <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                            <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                                            <li class="menu-item-has-children">
-                                                <a href="#">Blog details</a>
-                                                <ul class="sub-menu">
-                                                    <li><a href="blog-single.html">Blog details right sidebar</a></li>
-                                                    <li><a href="blog-single-left-sidebar.html">Blog details left sidebar</a></li>
-                                                    <li><a href="blog-single-fullwidth.html">Blog details fullwidth</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="fiberglass_windows.html">Fiberglass windows</a></li>
+                                            <li><a href="patio_doors.html">Patio doors</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
@@ -138,74 +105,32 @@
                                 <div id="dl-menu" class="dl-menuwrapper">
                                     <button class="dl-trigger">Open Menu</button>
                                     <ul class="dl-menu">
-                                        <li>
-                                            <a href="#">Home</a>
-                                            <ul class="dl-submenu">
-                                                <li><a href="index.html">Home style 1</a></li>
-                                                <li><a href="index-2.html">Home style 2</a></li>
-                                                <li><a href="index-3.html">Home style 3</a></li>
-                                            </ul>
-                                        </li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="#">Services</a>
+                                        <li><a href="#">Siding</a>
                                             <ul class="dl-submenu">
-                                                <li><a href="service.html">Service</a></li>
-                                                <li><a href="service-single.html">Service Single</a></li>
+                                                <li><a href="james_hardie_siding.html">James Hardie Siding</a></li>
+                                                <li><a href="stucco_removal.html">Stucco removal </a></li>
+                                                <li><a href="everlast_siding.html">Everlast siding</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#">Projects</a>
                                             <ul class="dl-submenu">
-                                                <li><a href="project.html">Project</a></li>
-                                                <li><a href="project-single.html">Project Single</a></li>
+                                                <li><a href="metal_roofing.html">Metal roofing</a></li>
+                                                <li><a href="traditional_shingles_roofing.html">Traditional shingles roofing</a></li>
+                                                <li><a href="synthetic_slate_roofing.html">Synthetic slate roofing</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#">Pages</a>
                                             <ul class="dl-submenu">
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="pricing.html">Pricing</a></li>
-                                                <li><a href="404.html">Error 404</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="http://google.com">Blog</a>
-                                            <ul class="dl-submenu">
-                                                <li><a href="blog.html">Blog right sidebar</a></li>
-                                                <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                                <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                                                <li>
-                                                    <a href="#">Blog details</a>
-                                                    <ul class="dl-submenu">
-                                                        <li><a href="blog-single.html">Blog details right sidebar</a></li>
-                                                        <li><a href="blog-single-left-sidebar.html">Blog details left sidebar</a></li>
-                                                        <li><a href="blog-single-fullwidth.html">Blog details fullwidth</a></li>
-                                                    </ul>
-                                                </li>
+                                                <li><a href="fiberglass_windows.html">Fiberglass windows</a></li>
+                                                <li><a href="patio_doors.html">Patio doors</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div><!-- /dl-menuwrapper -->
                             </div><!-- end of nav-collapse -->
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-4">
-                            <div class="header-right">
-                                <div class="close-form">
-                                    <a class="theme-btn" href="contact.html">Free Consulting</a>
-                                </div>
-                                <div class="header-search-form-wrapper">
-                                    <div class="cart-search-contact">
-                                        <button class="search-toggle-btn"><i class="fi flaticon-magnifiying-glass"></i></button>
-                                        <div class="header-search-form">
-                                            <form>
-                                                <div>
-                                                    <input type="text" class="form-control" placeholder="Search here...">
-                                                    <button type="submit"><i class="fi flaticon-magnifiying-glass"></i></button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div><!-- end of container -->
@@ -222,8 +147,7 @@
                             <h2>Digital Analysis</h2>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><span>Projects </span></li>
-                                <li><span>Digital Analysis</span></li>
+                                <li><span>Synthetic slate roofing</span></li>
                             </ul>
                         </div>
                     </div>
@@ -331,28 +255,7 @@
                                     <img src="assets/images/logo2.png" alt="blog">
                                 </div>
                                 <p>Management consulting includes a broad range of activities, and the many firms and their members often define these practices.</p>
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-twitter-alt"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-google"></i>
-                                        </a>
-                                    </li>
-                                </ul>
+
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
@@ -385,17 +288,16 @@
                         </div>
                         
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
-                            <div class="widget instagram">
+                            <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Projects</h3>
+                                    <h3>Services </h3>
                                 </div>
-                                <ul class="d-flex">
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/1.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/2.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/3.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/4.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/5.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/6.jpg" alt=""></a></li>
+                                <ul>
+                                    <li><a href="service-single.html">Advanced Analytics</a></li>
+                                    <li><a href="service-single.html">Corporate Finance</a></li>
+                                    <li><a href="service-single.html">Information Technology</a></li>
+                                    <li><a href="service-single.html">Customer Strategy</a></li>
+                                    <li><a href="service-single.html">Change Management</a></li>
                                 </ul>
                             </div>
                         </div>
