--- a/stucco_removal.html
+++ b/stucco_removal.html
@@ -144,7 +144,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Digital Analysis</h2>
+                            <h2>Stucco removal</h2>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Stucco removal</span></li>
