--- a/james_hardie_siding.html
+++ b/james_hardie_siding.html
@@ -144,7 +144,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Digital Analysis</h2>
+                            <h2>James Hardie Siding</h2>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>James Hardie Siding</span></li>
