--- a/patio_doors.html
+++ b/patio_doors.html
@@ -144,7 +144,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Digital Analysis</h2>
+                            <h2>Patio doors</h2>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Patio doors</span></li>
