--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Contact Us</h2>
+                            <h1>Contact Us</h1>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>contact</span></li>
@@ -278,13 +278,13 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget wpo-service-link-widget">
                                 <div class="widget-title">
-                                    <h3>Contact </h3>
+                                    <h4>Contact </h4>
                                 </div>
                                 <div class="contact-ft">
                                     <ul>
-                                        <li><i class="fi flaticon-location"></i>7 Green Lake Street Crawfordsville, IN 47933</li>
+                                        <li><i class="fi flaticon-location"></i>7 Green Lake Street Crawfordsville, IN
+                                            47933</li>
                                         <li><i class="fi flaticon-phone-call"></i>+1 800 123 456 789</li>
-                                        <li><i class="fi flaticon-send"></i>Consultar@gmail.com</li>
                                     </ul>
                                 </div>
                             </div>
@@ -292,7 +292,7 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Services </h3>
+                                    <h4>Services </h4>
                                 </div>
                                 <ul>
                                     <li><a href="service-single.html">Advanced Analytics</a></li>
@@ -306,7 +306,7 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Services </h3>
+                                    <h4>Services </h4>
                                 </div>
                                 <ul>
                                     <li><a href="service-single.html">Advanced Analytics</a></li>
