--- a/stucco_removal.html
+++ b/stucco_removal.html
@@ -144,7 +144,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Stucco removal</h2>
+                            <h1>Stucco removal</h1>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Stucco removal</span></li>
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="wpo-solutions-section">
-                                <h2>Best Benefits of Project</h2>
+                               <h3>Best Benefits of Project</h3>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-12">
                                         <div class="wpo-solutions-item">
@@ -259,15 +259,15 @@
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
-                            <div class="widget wpo-project-link-widget">
+                            <div class="widget wpo-service-link-widget">
                                 <div class="widget-title">
-                                    <h3>Contact </h3>
+                                    <h4>Contact </h4>
                                 </div>
                                 <div class="contact-ft">
                                     <ul>
-                                        <li><i class="fi flaticon-location"></i>7 Green Lake Street Crawfordsville, IN 47933</li>
+                                        <li><i class="fi flaticon-location"></i>7 Green Lake Street Crawfordsville, IN
+                                            47933</li>
                                         <li><i class="fi flaticon-phone-call"></i>+1 800 123 456 789</li>
-                                        <li><i class="fi flaticon-send"></i>Consultar@gmail.com</li>
                                     </ul>
                                 </div>
                             </div>
@@ -275,7 +275,7 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Services </h3>
+                                    <h4>Services </h4>
                                 </div>
                                 <ul>
                                     <li><a href="service-single.html">Advanced Analytics</a></li>
@@ -286,11 +286,10 @@
                                 </ul>
                             </div>
                         </div>
-                        
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h3>Services </h3>
+                                    <h4>Services </h4>
                                 </div>
                                 <ul>
                                     <li><a href="service-single.html">Advanced Analytics</a></li>
