--- a/about.html
+++ b/about.html
@@ -431,14 +431,13 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget link-widget">
                                 <div class="widget-title">
-                                    <h4>Services </h4>
+                                    <h4>Services  </h4>
                                 </div>
                                 <ul>
-                                    <li><a href="service-single.html">Advanced Analytics</a></li>
-                                    <li><a href="service-single.html">Corporate Finance</a></li>
-                                    <li><a href="service-single.html">Information Technology</a></li>
-                                    <li><a href="service-single.html">Customer Strategy</a></li>
-                                    <li><a href="service-single.html">Change Management</a></li>
+                                    <li><a href="james_hardie_siding.html">James Hardie Siding</a></li>
+                                    <li><a href="stucco_removal.html">Stucco removal </a></li>
+                                    <li><a href="everlast_siding.html">Everlast siding</a></li>
+                                    <li><a href="metal_roofing.html">Metal roofing</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -448,11 +447,10 @@
                                     <h4>Services </h4>
                                 </div>
                                 <ul>
-                                    <li><a href="service-single.html">Advanced Analytics</a></li>
-                                    <li><a href="service-single.html">Corporate Finance</a></li>
-                                    <li><a href="service-single.html">Information Technology</a></li>
-                                    <li><a href="service-single.html">Customer Strategy</a></li>
-                                    <li><a href="service-single.html">Change Management</a></li>
+                                    <li><a href="traditional_shingles_roofing.html">Traditional shingles roofing</a></li>
+                                    <li><a href="synthetic_slate_roofing.html">Synthetic slate roofing</a></li>
+                                    <li><a href="fiberglass_windows.html">Fiberglass windows</a></li>
+                                    <li><a href="patio_doors.html">Patio doors</a></li>
                                 </ul>
                             </div>
                         </div>
