--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                     <div class="col col-lg-10 offset-lg-1">
                         <div class="office-info">
                             <div class="row">
-                                <div class="col col-xl-4 col-lg-6 col-md-6 col-12">
+                                <div class="col col-xl-4 col-lg-6 col-md-6 col-12 offset-md-2 ">
                                     <div class="office-info-item">
                                         <div class="office-info-icon">
                                             <div class="icon">
@@ -176,20 +176,7 @@
                                         </div>
                                     </div>
                                 </div> 
-                                <div class="col col-xl-4 col-lg-6 col-md-6 col-12">
-                                    <div class="office-info-item">
-                                        <div class="office-info-icon">
-                                            <div class="icon">
-                                                <img src="assets/images/icon/mail-2.svg" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="office-info-text">
-                                            <h2>Email Us</h2>
-                                            <p>consultar@gmail.com</p>
-                                            <p>helloyou@gmail.com</p>
-                                        </div>
-                                    </div>
-                                </div> 
+
                                 <div class="col col-xl-4 col-lg-6 col-md-6 col-12">
                                     <div class="office-info-item">
                                         <div class="office-info-icon">
@@ -207,7 +194,7 @@
                             </div>
                         </div>
                         <div class="wpo-contact-title">
-                            <h2>Have Any Question?</h2>
+                            <h3>Have Any Question?</h3>
                             <p>It is a long established fact that a reader will be distracted
                                 content of a page when looking.</p>
                         </div>
